2008-03-20 Maxim
- /UI/Vision: Deleting the primitive by pressing "Del" support is added.
- /UI/Vision: Deleting the fill by doubleclicking the left mouse button on itself support is added.
- FIX:/UI/Vision: Angle function is fixed.
- FIX:/UI/Vision: Building of the filling path is fixed.
- /UI/WebVision: Scaling and roteting of primitives support is added.


2008-03-18 Roman
- FIX:/DAQ/JavaLikeCalc: Logical operation return to boolean is fixed.
- FIX:/UI/Vision: Size points first appearance time wait is added (500ms). For mouse release event lost prevention.
- !!:/UI/WebVision: Documentation and translation is updated and version 0.3.0 is relised.
- FIX:/UI/Vision, /UI/WebVision: No clearing images into primitives "Media" is fixed.
- FIX:/UI/VCAEngin: Storing user's attributes configuration after ID and TYPE changing.


2008-03-17 Roman
- !:/UI/VCAEngine: Child widget remove is made optimal. Remove full check IO table.
- /UI/Vision: Remove Project and Widget libraries updating on time child widgets changing.
- !!:/UI/Vision: Documentation and translation is updated and version 0.6.0 is relised.


2008-03-16 Roman
- !!:/SYS: Resource files (icons and menu links) for menu OpenSCADA execution is added.
- /SYS: RPM spec file is updated for new resources file support.
- !!:/SYS/Node: TCntrNode::nodeDel() finction is added.
- FIX:/UI/VCAEngine: Self widget attributes deletion on object destroy is fixed.
- FIX:/UI/VCAEngine: No deletion inheritor widgets on time of parent widget deletion is fixed
- /UI/Vision: Widget's level icons is changed.
- !!!:/UI/Vision: Development widget update on time included widgets insert/delete is made performance optimal.
- !:/UI/Vision: Inserted widgets into development widget selection is added.
- !!!:/UI/VCAEngine, /UI/Vision, /UI/WebVision: Font size dimension changed from punct to pixels.


2008-03-13 Roman
- FIX:/Archive/Value: Value's trend paint is fixed and updated.